fix arabic rules alignment

--- a/Fantasy/static/Fantasy/main.css
+++ b/Fantasy/static/Fantasy/main.css
@@ -82,9 +82,3 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
-
-.arabic {
-  float: right;
-  margin-right: 0;
-  margin-left: 16px
-}
